# excel-to-bag

./: README.md
docker/: Dockerfile  docker-compose.yaml
install/: local_setup.sh  setup.sh
install/csv/share/csv/: package.bash  package.zsh
install/csv_to_bag/lib/csv_to_bag/: csv_to_bag
install/csv_to_bag/share/csv_to_bag/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/csv_to_bag/share/csv_to_bag/cmake/: csv_to_bagConfig.cmake
log/: latest_build
src/csv_to_bag/: CMakeLists.txt
src/csv_to_bag/bag/test2_bag/: metadata.yaml  test2_bag_0.db3
src/csv_to_bag/bag/test3_bag/: metadata.yaml  test3_bag_0.db3
src/csv_to_bag/bag/test_bag/: metadata.yaml  test_bag_0.db3
src/csv_to_bag/data/: test.csv  test2.csv  test3.csv
src/csv_to_bag/src/: csv_to_bag.cpp
